syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Sitecore.Trekroner.ContainerService";
package containerServices;

service ContainerOperations {
	rpc ListContainers (ListContainersRequest) returns  (ListContainersResponse);
	rpc InspectContainer (InspectContainerRequest) returns (InspectContainerResponse);
}

message ListContainersRequest {

}

message ListContainersResponse {
	string projectName = 1;
	repeated ListContainersResponseItem containers = 2;
}

message ListContainersResponseItem {
	string id = 1;
	repeated string names = 2;
	string composeService = 3;
	string composeProject = 4;
	string image = 5;
	string state = 6;
	string status = 7;
}

message InspectContainerRequest {
	string name = 1;
}

message InspectContainerResponse {
	string id = 1;
	ContainerState state = 2;
}

message ContainerState {
	string status = 1;
	bool running = 2;
	bool paused = 3;
	bool restarting = 4;
	bool oomKilled = 5;
	bool dead = 6;
	int64 pid = 7;
	int64 exitCode = 8;
	string error = 9;
	string startedAt = 10;
	string finishedAt = 11;
	ContainerHealth health = 12;
}

message ContainerHealth {
	string status = 1;
	int64 failingStreak = 2;
	repeated ContainerHealthcheckResult log = 3;

}

message ContainerHealthcheckResult {
	google.protobuf.Timestamp start = 1;
	google.protobuf.Timestamp end = 2;
	int64 exitCode = 3;
	string output = 4;
}
